--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -16,58 +16,63 @@
             }
 
             .my-cont{
-                background-color: aquamarine;
+                background-color: ghostwhite;
+            }
+
+            body{
+                background-image: url("Imagens/bgBodyMangaPedia.jpg");
+                background-size: cover;
             }
         </style>
     </head> 
     <body>
 
         <!--Início navbar-->
-        <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bg-primary mb-3">
             <div class="container-fluid">
-                <i class="bi bi-book-half icones"></i>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="Index_mangapedia.html">Home</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Categorias
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li class="dropdown-item">Ação e aventura</li>
-                                <li class="dropdown-item">Esporte</li>
-                                <li class="dropdown-item">Romance</li>
-                                <li class="dropdown-item">Mistério</li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="Contato_mangapedia.html">Contato</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Plataformas
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li class="dropdown-item">MangaLivre</li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-                        <button class="btn btn-success" type="submit"><i class="bi bi-search"></i></button>
-                    </form>
-                </div>
+                    <i class="bi bi-book-half icones"></i>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item bg-primary-subtle rounded-3 mx-3">
+                                <a class="nav-link active" aria-current="page" href="Index_mangapedia.html">Home</a>
+                            </li>
+                            <li class="nav-item dropdown bg-primary-subtle rounded-3 me-3">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Categorias
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li class="dropdown-item">Ação e aventura</li>
+                                    <li class="dropdown-item">Esporte</li>
+                                    <li class="dropdown-item">Romance</li>
+                                    <li class="dropdown-item">Mistério</li>
+                                </ul>
+                            </li>
+                            <li class="nav-item bg-primary-subtle rounded-3 me-3">
+                                <a class="nav-link" aria-current="page" href="Contato_mangapedia.html">Contato</a>
+                            </li>
+                            <li class="nav-item dropdown bg-primary-subtle rounded-3 me-3">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Plataformas
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li class="dropdown-item">MangaLivre</li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                            <button class="btn btn-success" type="submit"><i class="bi bi-search"></i></button>
+                        </form>
+                    </div>
             </div>
         </nav>
         <!--Fim navbar-->
 
         <!--Início Bem-vindo-->
-        <div class="container my-cont">
+        <div class="container my-cont rounded-3">
             <div class="row">
                 <div class="col-12">
                     <h1 class="text-center display-1 fw-normal">Sejam bem-vindos!</h1>
