Ajustes simples na Navbar e no conteúdo.

--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -36,28 +36,28 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item bg-primary-subtle rounded-3 mx-3">
+                            <li class="nav-item rounded-3 mx-3">
                                 <a class="nav-link active" aria-current="page" href="Index_mangapedia.html">Home</a>
                             </li>
-                            <li class="nav-item dropdown bg-primary-subtle rounded-3 me-3">
+                            <li class="nav-item dropdown me-3">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Categorias
                                 </a>
-                                <ul class="dropdown-menu">
+                                <ul class="dropdown-menu dropdown-menu-dark">
                                     <li class="dropdown-item">Ação e aventura</li>
                                     <li class="dropdown-item">Esporte</li>
                                     <li class="dropdown-item">Romance</li>
                                     <li class="dropdown-item">Mistério</li>
                                 </ul>
                             </li>
-                            <li class="nav-item bg-primary-subtle rounded-3 me-3">
+                            <li class="nav-item rounded-3 me-3">
                                 <a class="nav-link" aria-current="page" href="Contato_mangapedia.html">Contato</a>
                             </li>
-                            <li class="nav-item dropdown bg-primary-subtle rounded-3 me-3">
+                            <li class="nav-item dropdown rounded-3 me-3">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Plataformas
                                 </a>
-                                <ul class="dropdown-menu">
+                                <ul class="dropdown-menu dropdown-menu-dark">
                                     <li class="dropdown-item">MangaLivre</li>
                                 </ul>
                             </li>
@@ -78,16 +78,8 @@
                     <h1 class="text-center display-1 fw-normal">Sejam bem-vindos!</h1>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="col-12">
-                    <p class="text-center display-6"></p>
-                </div>
-            </div>
         </div>
         <!--Fim Bem-vindo-->
-
-
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
