--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -11,17 +11,21 @@
         <title>MangaPedia</title>
 
         <style type="text/css">
+            body{
+                background-image: url("Imagens/bgBodyMangaPedia.jpg");
+                background-size: cover;
+            }
+            
             .icones{
                 color: darkblue;
             }
 
-            .my-cont{
-                background-color: ghostwhite;
+            .navButtons:hover{
+                background-image: linear-gradient(to bottom, #0783E8, #055EA6);
             }
 
-            body{
-                background-image: url("Imagens/bgBodyMangaPedia.jpg");
-                background-size: cover;
+            .cont-Bv{
+                background-color: ghostwhite;
             }
         </style>
     </head> 
@@ -36,10 +40,10 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item rounded-3 mx-3">
+                            <li class="nav-item rounded-3 mx-3 navButtons">
                                 <a class="nav-link active" aria-current="page" href="Index_mangapedia.html">Home</a>
                             </li>
-                            <li class="nav-item dropdown me-3">
+                            <li class="nav-item dropdown me-3 rounded-3 navButtons">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Categorias
                                 </a>
@@ -50,10 +54,10 @@
                                     <li class="dropdown-item">Mistério</li>
                                 </ul>
                             </li>
-                            <li class="nav-item rounded-3 me-3">
+                            <li class="nav-item rounded-3 me-3 navButtons">
                                 <a class="nav-link" aria-current="page" href="Contato_mangapedia.html">Contato</a>
                             </li>
-                            <li class="nav-item dropdown rounded-3 me-3">
+                            <li class="nav-item dropdown rounded-3 me-3 navButtons">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Plataformas
                                 </a>
@@ -72,14 +76,29 @@
         <!--Fim navbar-->
 
         <!--Início Bem-vindo-->
-        <div class="container my-cont rounded-3">
+        <div class="container cont-Bv rounded-3 mb-3">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="text-center display-1 fw-normal">Sejam bem-vindos!</h1>
+                    <h1 class="text-center display-1 fw-normal">Sejam bem-vindos</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <p class="text-center display-6 fs-3">ao MangaPedia, a maior enciclopédia de mangás!</p>
                 </div>
             </div>
         </div>
         <!--Fim Bem-vindo-->
+
+        <!--Início Carrosel de notícias-->
+        <div class="container bg-info-subtle rounded-4 mb-3">
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="text-center display-2 fs-1 fw-normal">Confira abaixo as últimas novidades do mundo dos mangás.</h1>
+                </div>
+            </div>
+        </div>
+        <!--Fim Carrossel de notícias-->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
