--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -27,6 +27,15 @@
             .cont-Bv{
                 background-color: ghostwhite;
             }
+
+            .btnClasse{
+                margin-top: 2%;
+            }
+
+            .tamanhoImg{
+                height: 400px;
+                width: 250px;
+            }
         </style>
     </head> 
     <body>
@@ -48,10 +57,9 @@
                                     Categorias
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li class="dropdown-item">Ação e aventura</li>
-                                    <li class="dropdown-item">Esporte</li>
-                                    <li class="dropdown-item">Romance</li>
-                                    <li class="dropdown-item">Mistério</li>
+                                    <li><a class="dropdown-item" href="acao.html">Ação e aventura</a></li>
+                                    <li><a class="dropdown-item" href="esporte.html">Esporte</a></li>
+                                    <li><a class="dropdown-item" href="romance.html">Romance</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item rounded-3 me-3 navButtons">
@@ -62,7 +70,7 @@
                                     Plataformas
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li class="dropdown-item">MangaLivre</li>
+                                    <li><a class="dropdown-item" href="https://mangalivre.net/" target="_blank">MangaLivre</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -97,8 +105,164 @@
                     <h1 class="text-center display-2 fs-1 fw-normal">Confira abaixo as últimas novidades do mundo dos mangás.</h1>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <div id="carouselNoticias" class="carousel slide">
+                      <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselNoticias" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselNoticias" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselNoticias" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselNoticias" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#carouselNoticias" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                      </div>
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="Imagens/teste1.jpg" class="d-block w-100" alt="deu erro">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Testando</h2>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="Imagens/teste2.jpg" class="d-block w-100" alt="deu erro">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Testando2</h2>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="Imagens/teste1.jpg" class="d-block w-100" alt="deu erro">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Testando3</h2>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="Imagens/teste2.jpg" class="d-block w-100" alt="deu erro">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Testando4</h2>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="Imagens/teste1.jpg" class="d-block w-100" alt="deu erro">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Testando5</h2>
+                            </div>
+                        </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselNoticias" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselNoticias" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                    </div>
+                </div>
+            </div>
         </div>
         <!--Fim Carrossel de notícias-->
+
+        <!-- Início countainer Ação -->
+        <div class="container cont-Bv rounded-3 mb-3">
+            <div class="row">
+                <div class="col">
+                    <h1 class="text-left">Ação e Aventura</h1>
+                </div>
+                <div class="col">
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-end btnClasse">
+                      <a href="acao.html"><button class="btn btn-primary" type="button">Ver Todos</button></a>
+                    </div>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-md-3 col-sm-12">
+                    <img src="Imagens/acao/jjk.jpg" class="tamanhoImg">
+                    <p>Jujutsu Kaisen</p>
+                </div>
+                <div class="col-md-3 col-sm-12">
+                    <img src="Imagens/acao/snv.jpg" class="tamanhoImg">
+                    <p>Shuumatsu no Walkyrie</p>
+                </div>
+                <div class="col-md-3 col-sm-12">
+                    <img src="Imagens/acao/cm.jpg" class="tamanhoImg">
+                    <p>Chainsaw Man</p>
+                </div>
+                <div class="col-md-3 col-sm-12">
+                    <img src="Imagens/acao/opm.jpg" class="tamanhoImg">
+                    <p>One Punch Man</p>
+                </div>
+            </div>
+        </div>
+        <!-- Fim countainer Ação -->
+
+        <!-- Início countainer Esporte -->
+        <div class="container cont-Bv rounded-3 mb-3">
+            <div class="row">
+                <div class="col">
+                    <h1 class="text-left">Esporte</h1>
+                </div>
+                <div class="col">
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-end btnClasse">
+                      <a href="esporte.html"><button class="btn btn-primary" type="button">Ver Todos</button></a>
+                    </div>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-md-3 col-sm-12">
+                    <img src="Imagens/esporte/hni.jpg" class="tamanhoImg">
+                    <p>Hajime no Ippo</p>
+                </div>
+                <div class="col-md-3 col-sm-12">
+                    <img src="Imagens/esporte/bl.jpg" class="tamanhoImg">
+                    <p>Blue Lock</p>
+                </div>
+                <div class="col-md-3 col-sm-12">
+                    <img src="Imagens/esporte/h.jpg" class="tamanhoImg">
+                    <p>Haikyuu</p>
+                </div>
+                <div class="col-md-3 col-sm-12">
+                    <img src="Imagens/esporte/r.jpg" class="tamanhoImg">
+                    <p>Real</p>
+                </div>
+            </div>
+        </div>
+        <!-- Fim countainer Esporte -->
+
+        <!-- Início countainer Romance -->
+        <div class="container cont-Bv rounded-3 mb-3">
+            <div class="row">
+                <div class="col">
+                    <h1 class="text-left">Romance</h1>
+                </div>
+                <div class="col">
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-end btnClasse">
+                      <a href="romance.html"><button class="btn btn-primary" type="button">Ver Todos</button></a>
+                    </div>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-md-3 col-sm-12">
+                    <img src="Imagens/romance/na.jpg" class="tamanhoImg">
+                    <p>Nagatoro</p>
+                </div>
+                <div class="col-md-3 col-sm-12">
+                    <img src="Imagens/romance/ks.jpg" class="tamanhoImg">
+                    <p>Kaguya-Sama</p>
+                </div>
+                <div class="col-md-3 col-sm-12">
+                    <img src="Imagens/romance/uc.jpg" class="tamanhoImg">
+                    <p>Uzaki-Chan</p>
+                </div>
+                <div class="col-md-3 col-sm-12">
+                    <img src="Imagens/romance/kcc.jpg" class="tamanhoImg">
+                    <p>Komi-San</p>
+                </div>
+            </div>
+        </div>
+        <!-- Fim countainer Romance -->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
