acao.html e esporte.html modificados

--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -36,6 +36,10 @@
                 height: 350px;
                 width: 220px;
             }
+
+            .crPadding{
+                padding-bottom: 1%;
+            }
         </style>
     </head> 
     <body>
@@ -116,7 +120,7 @@
                         <button type="button" data-bs-target="#carouselNoticias" data-bs-slide-to="3" aria-label="Slide 4"></button>
                         <button type="button" data-bs-target="#carouselNoticias" data-bs-slide-to="4" aria-label="Slide 5"></button>
                       </div>
-                      <div class="carousel-inner">
+                      <div class="carousel-inner crPadding">
                         <div class="carousel-item active">
                             <img src="Imagens/teste1.jpg" class="d-block w-100" alt="deu erro">
                             <div class="carousel-caption d-none d-md-block">
