--- a/esporte.html
+++ b/esporte.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-	<title>Mangás:Esporte</title>
+    <title>Mangás:Esporte</title>
 
-	<style type="text/css">
+    <style type="text/css">
             body{
                 background-image: url("Imagens/bgBodyMangaPedia.jpg");
                 background-size: cover;
+            }
+
+            a{
+                color: black;
+            }
+
+            a:hover{
+                color: blue;
             }
             
             .icones{
@@ -27,6 +35,10 @@
                 background-color: ghostwhite;
             }
 
+            .cont-Mg{
+                background-color: lightgray;
+            }
+
             .btnClasse{
                 margin-top: 2%;
             }
@@ -35,11 +47,19 @@
                 height: 400px;
                 width: 250px;
             }
+
+            .lgPadding{
+                padding-bottom: 1%;
+            }
+
+            .mgImg{
+                margin: 1%;
+            }
         </style>
 </head>
 <body>
 
-	<!--Início navbar-->
+    <!--Início navbar-->
         <nav class="navbar navbar-expand-lg bg-primary mb-3">
             <div class="container-fluid">
                     <i class="bi bi-book-half icones"></i>
@@ -81,6 +101,156 @@
             </div>
         </nav>
         <!--Fim navbar-->
+
+        <!-- Inicio container ListGroup-->
+
+        <div class="container cont-Bv rounded-3 mb-3">
+            <div class="row">
+                <div class="col">
+                    <h1 class="text-left">Âncoras</h1><hr>
+                </div>
+            </div>
+            <ul class="list-group list-group-flush">
+  <li class="list-group-item"><a href="#aa">Ao Ashi</a></li>
+  <li class="list-group-item"><a href="#bl">Blue Lock</a></li>
+  <li class="list-group-item"><a href="#ct">Captain Tsubasa</a></li>
+  <li class="list-group-item"><a href="#h">Haikyuu</a></li>
+  <li class="list-group-item"><a href="#hni">Hajime no Ippo</a></li>
+  <li class="list-group-item"><a href="#knb">Kuroko no Basket</a></li>
+  <li class="list-group-item"><a href="#pot">Prince of Tennis</a></li>
+  <li class="list-group-item"><a href="#r">Real</a></li>
+  <li class="list-group-item"><a href="#sd">Slam Dunk</a></li>
+  <li class="list-group-item"><a href="#yp">Yowamushi Pedal</a></li>
+</ul>
+
+        </div>
+        <!-- Fim container ListGroup-->
+
+        <!-- Inicio container mangás-->
+
+        <div class="container cont-Mg rounded-3 mb-3">
+            <div class="row">
+                <h1>Mangás</h1>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/esporte/aa.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6 scrollpsy-example"data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" tabindex="0" id="aa">
+                    <h4 class="text-left">Ao Ashi</h4><br>
+                    <h6>342 Capitulos</h6><br>
+                    <p>Ashito Aoi, um estudante do terceiro ano do ensino médio de Ehime, conhece Fukuda Tatsuya, um treinador da “J Youth League”. Mesmo que ainda tenha uma personalidade forte, Ashito tem um incrível potêncial que o fez ser convidado pelo treinador Fukuda para participar da seleção de sua equipe em Tóquio. A história do garoto que vai revolucionar o futebol no Japão vai começar.</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/esporte/bl.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="bl">
+                    <h4 class="text-left">Blue Lock</h4><br>
+                    <h6>236 Capitulos</h6><br>
+                    <p>Yoichi Isagi perdeu a oportunidade de ir para o campeonato nacional do ensino médio porque ele passou para seu companheiro de equipe que perdeu em vez de chutar para o gol si mesmo. Isagi é um dos 300 atacantes de Sub-18 escolhidos por Jinpachi Ego, contratado pela Associação de Futebol do Japão após a Copa do Mundo de 2018, para guiar o Japão na conquista da Copa do Mundo ao destruir o futebol japonês. O plano de Ego é isolar os 300 atacantes em uma instituição parecida com uma prisão chamada “Blue Lock”, para criar o maior “egoista” / atacante do mundo, que tem faltado no futebol japonês.</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/esporte/ct.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="ct">
+                    <h4 class="text-left">Captain Tsubasa</h4><br>
+                    <h6>146 Capitulos</h6><br>
+                    <p>Rising Sun vai girar em torno de Tsubasa, como ele pretende participar nos Jogos Olímpicos como um representante do Japão.</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/esporte/h.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="h">
+                    <h4 class="text-left">Haikyuu</h4><br>
+                    <h6>404 Capitulos</h6><br>
+                    <p>Hinata Shouyou, ao ver uma partida de voleibol, fica fascinado com "o Pequeno Gigante", um habilidoso jogador de vôlei, decidindo-se junta-se clube de vôlei de sua escola, no entanto ele é o único membro do clube. Após 3 anos ele finalmente completar o time e ruma para a disputa do Torneio de Primavera. No entanto seu primeiro oponente de cara é o preferido das finais. É neste momento que ocorre o encontro de Hinata com Kageyama Tobio, o "Rei da Quadra"!!!</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/esporte/hni.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="hni">
+                    <h4 class="text-left">Hajime no Ippo</h4><br>
+                    <h6>1436 Capitulos</h6><br>
+                    <p>Makunouchi Ippo, um garoto humilde do segundo ano colegial que na maior parte do seu tempo livre ajuda a sua mãe no trabalho, que possui uma loja que aluga barcos para pesca. Por causa disto, ele não consegue tempo para fazer amigos, e o pior, ele é alvo de Umezawa e sua gangue, que não gostam de Ippo e batem nele desde criança. Um dia, embaixo de uma ponte onde Ippo apanhava de Umezawa, Takamura, um boxeador veterano que foi campeão do torneio entre os boxeadores novatos do Japão, salva Ippo de Umezawa e o leva para o ginásio de boxe para tratar de seus ferimentos.
+
+                    Lá, Takamura empresta alguns vídeos com lutas de boxe para encorajá-lo um pouco. Depois de ver os vídeos, Ippo começa a se interessar em boxe, pois ele se convenceu de que nele poderia encontrar a resposta que procurava desde criança, que era “qual o significa de ser forte?” Ippo acaba convencendo Takamura e o treinador Kamogawa, provando que é capaz de se tornar um boxeador com a sua determinação e esforço.</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/esporte/knb.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="knb">
+                    <h4 class="text-left">Kuroko no Basket</h4><br>
+                    <h6>276 Capitulos</h6><br>
+                    <p>Um time de basquete ginasial do Colégio Teikou se destacou vencendo diversos campeonatos. Os jogadores titulares daquele time ficaram conhecidos como ?A Geração dos Milagres?. Cada um deles transferiu-se para um colégio diferente no ensino médio. Entretanto, existia um rumor sobre a existência de um sexto jogador reconhecido pelos outros cinco como superior, o sexto jogador fantasma: Tetsuya Kuroko.</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/esporte/pot.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="pot">
+                    <h4 class="text-left">Prince of Tennis</h4><br>
+                    <h6>216 Capitulos</h6><br>
+                    <p>A história se passa em Tokyo, focado na Seishun Gakuen (青春学園), mais comumente chamado de Seigaku, uma escola particular conhecida, principalmente, pelo seu clube de tênis e dos jogadores talentosos. A história inicia-se quando um aluno chamado Echizen Ryoma se transfere para essa escola e começa a se destacar por suas habilidades no esporte ao derrotar diversos veteranos rapidamente. Na estrada para alcançar seu sonho de ganhar o Torneio Nacional de Tênis das Escolas Secundárias, os titulares do time do Seigaku, com seu mais novo membro, Echizen Ryoma, fazem novas amizades e aprendem diversas técnicas complexas. Relacionados:</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/esporte/r.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="r">
+                    <h4 class="text-left">Real</h4><br>
+                    <h6>94 Capitulos</h6><br>
+                    <p>A história gira em torno de três adolescentes: Nomiya Tomomi, que abandonou a escola, Togawa Kiyoharu, um ex-velocista, que agora joga basquete de cadeira de rodas e Takahashi Hisanobu, um líder popular da equipe de basquete da escola, que agora encontra-se paraplégico após um acidente. REAL apresenta um elenco de personagens que são marginalizados pela sociedade, mas que são unidos por uma característica comum: O desejo de jogar basquete. Mesmo sem lugar para jogá-lo dentro de Nomiya e considerados sem futuro em suas vidas. Togawa com sua personalidade difícil, briga constantemente com seus próprios companheiros de equipe. Takahashi, que era o líder da equipe, agora se encontra incapaz de mover-se do peito para baixo.
+
+                    REAL também lida com a realidade das deficiências físicas e psicológicas na luta contra as inferioridades dos personagens, mostrando a tentativa de romper suas próprias barreiras psicológicas pouco a pouco. Enquanto o basquete é o maior tema de REAL, uma maior ênfase é colocada no desenvolvimento dos personagens – Takehiko Inoue explora o passado dos personagens, seu mundo interior, e suas tentativas de conseguir algo na vida.</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/esporte/sd.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="sd">
+                    <h4 class="text-left">Slam Dunk<br>
+                    <h6>276 Capitulos</h6><br>
+                    <p>Vencer não é tudo no jogo de basquete, mas quem quer ficar em segundo lugar? É preciso dedicação e disciplina para ser o melhor, e a equipe de aros Shohoku High quer ser exatamente isso. Eles têm um último ano para realizar o sonho de seu capitão de chegar à final – eles vão fazer isso? O lendário mangá de basquete amado de Takehiko Inoue está finalmente aqui e o conto de uma vida está em suas mãos.
+
+                    Hanamichi Sakuragi não tem jogo com garotas – absolutamente nenhum! Não ajuda que ele seja conhecido por derrubar a qualquer momento e sempre sair por cima. Um brigão sem esperança, ele foi rejeitado por 50 garotas seguidas! Tudo isso muda quando ele conhece a garota dos seus sonhos, Haruko, e ela na verdade não tem medo dele! Quando ela o apresenta ao jogo de basquete, sua vida muda para sempre…</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/esporte/yp.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="yp">
+                    <h4 class="text-left">Yowamushi Pedal</h4><br>
+                    <h6>746 Capitulos</h6><br>
+                    <p>O otaku Sakamichi Onoda acaba de entrar na escola e tem planos de entrar para o clube de anime. No ensino médio, Onoda não tinha nenhum amigo com quem pudesse falar sobre anime, jogos, Akihabara e outras coisas de otaku, e ele está esperando que ele possa fazer tais amigos no clube de animes, mas ele descobre que ela foi dissolvida. A fim de restabelecer o clube que ele tenta encontrar quatro outras pessoas que gostariam de participar. Desde que ele era um garotinho, Onoda montou sua mamachari – uma bicicleta volumosa com um quadro diferenciado usado principalmente para passeios curtos, como para diversão casual ou para pegar mantimentos – para ir para Akihabara toda semana para conferir ou comprar coisas otaku. O calouro Fellow Shunsuke Imaizumi e ciclista, durante o treinamento, nota-se um menino ( Onoda ) montando sua mamchari em uma estrada íngreme. Freshman e corrida ciclista de estrada, Shokichi Naruko visita Akihabara para obter alguns modelos de Gundam de plástico para seus irmãos mais novos e atende Onoda que chama sua atenção por causa da sua habilidade de bicicleta na mamachari e depois de descobrir que eles vão para a mesma escola. Mais tarde, ambos Naruko e Imaizumi tentam convencê-lo a se juntar ao clube de corrida de bicicleta, mas ele vai aceitar?</p>
+                </div>
+                <hr>
+            </div>
+        </div>
+        <!-- Fim container mangás-->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
