romance.html modificado

--- a/romance.html
+++ b/romance.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-	<title>Mangás:Romance</title>
+    <title>Mangás:Romance</title>
 
-	<style type="text/css">
+    <style type="text/css">
             body{
                 background-image: url("Imagens/bgBodyMangaPedia.jpg");
                 background-size: cover;
+            }
+
+            a{
+                color: black;
+            }
+
+            a:hover{
+                color: blue;
             }
             
             .icones{
@@ -27,6 +35,10 @@
                 background-color: ghostwhite;
             }
 
+            .cont-Mg{
+                background-color: lightgray;
+            }
+
             .btnClasse{
                 margin-top: 2%;
             }
@@ -35,11 +47,19 @@
                 height: 400px;
                 width: 250px;
             }
+
+            .lgPadding{
+                padding-bottom: 1%;
+            }
+
+            .mgImg{
+                margin: 1%;
+            }
         </style>
 </head>
 <body>
 
-	<!--Início navbar-->
+    <!--Início navbar-->
         <nav class="navbar navbar-expand-lg bg-primary mb-3">
             <div class="container-fluid">
                     <i class="bi bi-book-half icones"></i>
@@ -81,6 +101,150 @@
             </div>
         </nav>
         <!--Fim navbar-->
+
+        <!-- Inicio container ListGroup-->
+
+        <div class="container cont-Bv rounded-3 mb-3">
+            <div class="row">
+                <div class="col">
+                    <h1 class="text-left">Âncoras</h1><hr>
+                </div>
+            </div>
+            <ul class="list-group list-group-flush">
+  <li class="list-group-item"><a href="#ahr">Ao Haru Ride</a></li>
+  <li class="list-group-item"><a href="#gotobun">Go-Tōbun no Hanayome</a></li>
+  <li class="list-group-item"><a href="#horimiya">Horimiya</a></li>
+  <li class="list-group-item"><a href="#ks">Kaguyas-Sama</a></li>
+  <li class="list-group-item"><a href="#ko">Kanojo, Okarishimasu</a></li>
+  <li class="list-group-item"><a href="#kcc">Komi-San</a></li>
+  <li class="list-group-item"><a href="#na">Nagatoro</a></li>
+  <li class="list-group-item"><a href="#no">Noragami</a></li>
+  <li class="list-group-item"><a href="#uc">Uzaki-Chan</a></li>
+  <li class="list-group-item"><a href="#w">Wotakoi</a></li>
+</ul>
+
+        </div>
+        <!-- Fim container ListGroup-->
+
+        <!-- Inicio container mangás-->
+
+        <div class="container cont-Mg rounded-3 mb-3">
+            <div class="row">
+                <h1>Mangás</h1>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/romance/ahr.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6 scrollpsy-example"data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" tabindex="0" id="ahr">
+                    <h4 class="text-left">Ao Haru Ride</h4><br>
+                    <h6>54 Capitulos</h6><br>
+                    <p>Yoshioka Futaba tem algumas razões pelas quais ela quer “reiniciar” sua imagem e vida como estudante de colegial. Porque ela é fofa, ela foi isolada pelas amigas no Fundamental, e por causa de um mal-entendido, ela não conseguiu ter os sentimentos correspondidos pelo único garoto que ela sempre gostou, Tanaka-kun. Agora no Colegial, ela está determinada a ser o mais vulgar possível para que suas amigas não fiquem com ciúmes dela. Satisfeita ao viver sua vida dessa maneira, ela reencontra o Tanaka-kun, mas agora ele está sob o nome de Mabuchi Kou. Ele fala pra ela que sentia o mesmo por ela quando eles eram mais jovens, mas que agora as coisas podem nunca mais serem as mesmas. Futaba será capaz de continuar seu amor, que nem nunca começou há três anos atrás?</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/romance/gotobun.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="gotobun">
+                    <h4 class="text-left">Go-Tōbun no Hanayome</h4><br>
+                    <h6>126 Capitulos</h6><br>
+                    <p>Fuutarou Uesugi é um estudante pobre e anti-social que um dia conhece a rica estudante transferida Itsuki Nakano. Eles discutem, mas quando Uesugi percebe que ele deve ser o professor particular dela, ele tenta melhorar a sua má primeira impressão. Enquanto tenta fazer isso, ele é atacado por outras quatro garotas. Quem são essas 5 lindas garotas?</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/romance/horimiya.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="horimiya">
+                    <h4 class="text-left">Horimiya</h4><br>
+                    <h6>128 Capitulos</h6><br>
+                    <p>Hori é uma colegial normal, mas ela é uma pessoa completamente diferente fora da escola. Na ausência de seus pais ela cuida de seu irmão mais novo. Miyamura um colega de classe dela , ele é um garoto normal, quatro-olhos e meio estranho mas ele também fora da escola tem um segredo. Quando os dois se encontram inesperadamente, descobrem segredos uns dos outros começam a desenvolver uma amizade inesperada. Que situações podem esperá-los já que um conheçe o segredo do outro?!</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/romance/ks.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="ks">
+                    <h4 class="text-left">Kaguya-Sama</h4><br>
+                    <h6>291 Capitulos</h6><br>
+                    <p>Shinomiya Kaguya e Miyuki Shirogane são membros prestigiosos do Concelho Estudantil da Academia Shuchi'in, afirmando a sua posição de gênio entre os gênios. Todo o tempo que eles passam juntos ocasionou que eles desenvolvessem sentimentos mútuos, mas o orgulho deles não vai permitir eles se confessarem e se tornarem submissos no relacionamento! Amor é guerra e a batalha deles para fazer o outro se confessar começa agora!!</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/romance/ko.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="ko">
+                    <h4 class="text-left">Kanojo, Okarishimasu</h4><br>
+                    <h6>309 Capitulos</h6><br>
+                    <p>Após tomar um fora Kinoshita Kazuya contrata Mizuhara Chizuru através de um aplicativo chamado Diamond, um aplicativo de namoradas por aluguel. Mas um relação apenas de trabalho acaba em um encontro surpresa pelos dois estudarem na mesma faculdade.</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/romance/kcc.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="kcc">
+                    <h4 class="text-left">Komi-San</h4><br>
+                    <h6>432 Capitulos</h6><br>
+                    <p>Komi-san é uma bela e admirável garota que ninguém consegue tirar os olhos. Quase todos da escola a veem como alguém fora do alcance, mas Tadano Shigeo sabe a verdade: ela apenas não sabe como se comunicar com os outras pessoas.Komi-san, que deseja corrigir este mau hábito dela, tenta melhorar com a ajuda do Tadano-kun...</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/romance/na.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="na">
+                    <h4 class="text-left">Nagatoro</h4><br>
+                    <h6>161 Capitulos</h6><br>
+                    <p>Nagatoro é uma menina de primeiro ano na escola que adora fazer bullying com seu Senpai. Mas ele aceita isso, mesmo depois de ter passado por todos os tipos de situações humilhantes e embaraçosas, porque ele está apaixonado por ela.</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/romance/no.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="no">
+                    <h4 class="text-left">Noragami</h4><br>
+                    <h6>139 Capitulos</h6><br>
+                    <p>Yato é um deus menor, cujo sonho é ter um monte de seguidores adorá-lo e orar com ele. Infelizmente, o seu sonho está longe de se tornar realidade desde que ele não tem sequer um único santuário dedicado a ele. Para piorar as coisas, o único parceiro que tinha que o ajudava a resolver os problemas das pessoas, tinha acabado de sair do trabalho. Sua existência divina e a sorte só pode mudar quando ele se depara com Hiyori Iki e salva sua vida, um feito que também deixa em muito a situação para que ela está presa com ele até que seu problema é resolvido. Juntamente com Hiyori e sua nova Yukine parceiro de armas, Yato vai fazer tudo que puder para ganhar fama, reconhecimento e apenas talvez, um santuário dedicado a ele, também...</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/romance/uc.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="uc">
+                    <h4 class="text-left">Uzaki-Chan<br>
+                    <h6>125 Capitulos</h6><br>
+                    <p>A vida diária de um quieto universitário que só quer ficar sozinho, que começou a ser zombado pela sua Kouhai "Fofa! Mas irritante!"</p>
+                </div>
+                <hr>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-4  mgImg">
+                    <img src="Imagens/romance/w.jpg" class="tamanhoImg" alt="Berserk">
+                </div>
+                <div class="col-md-6" id="w">
+                    <h4 class="text-left">Wotakoi</h4><br>
+                    <h6>111 Capitulos</h6><br>
+                    <p>Poderiam um cara que em segredo é viciado em jogos e uma mulher que em segredo é uma fujoshi namorarem sem que seus hobbies atrapalhem? Narumi Momose foi abandonada por ex-namorados sempre que eles descobriam que ela é uma otaku, e quando ela descobre que seu amigo de infância e também otaku, Hirotaka Nifuji, trabalha na mesma empresa que ela, ela vê seu segredo ameaçado. Assim, ela traça um plano para manter as aparências, mas Hirotaka apenas faz uma contra-proposta: Por que nós não namoramos?!</p>
+                </div>
+                <hr>
+            </div>
+        </div>
+        <!-- Fim container mangás-->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
