Primeiro mangá com link na Home e ajustes nas âncoras.

--- a/acao.html
+++ b/acao.html
@@ -39,17 +39,9 @@
             	background-color: lightgray;
             }
 
-            .btnClasse{
-                margin-top: 2%;
-            }
-
             .tamanhoImg{
                 height: 400px;
                 width: 250px;
-            }
-
-            .lgPadding{
-            	padding-bottom: 1%;
             }
 
             .mgImg{
@@ -104,24 +96,24 @@
 
         <!-- Inicio container ListGroup-->
 
-        <div class="container cont-Bv rounded-3 mb-3">
+        <div class="container cont-Bv rounded-3 mb-3 p-3">
         	<div class="row">
         		<div class="col">
         			<h1 class="text-left">Âncoras</h1><hr>
         		</div>
         	</div>
         	<ul class="list-group list-group-flush">
-  <li class="list-group-item"><a href="#berserk">Berserk</a></li>
-  <li class="list-group-item"><a href="#bleach">Bleach</a></li>
-  <li class="list-group-item"><a href="#bnh">Boku no Hero</a></li>
-  <li class="list-group-item"><a href="#cm">Chainsaw Man</a></li>
-  <li class="list-group-item"><a href="#jba">Jojo's Bizarre Adventures</a></li>
-  <li class="list-group-item"><a href="#jjk">Jujutsu Kaisen</a></li>
-  <li class="list-group-item"><a href="#kny">Kimetsu no Yaiba</a></li>
-  <li class="list-group-item"><a href="#n">Naruto</a></li>
-  <li class="list-group-item"><a href="#opm">One Punch Man</a></li>
-  <li class="list-group-item"><a href="#snv">Shuumatsu no Walkyrie</a></li>
-</ul>
+				<li class="list-group-item"><a href="#berserk">Berserk</a></li>
+				<li class="list-group-item"><a href="#bleach">Bleach</a></li>
+				<li class="list-group-item"><a href="#bnh">Boku no Hero</a></li>
+				<li class="list-group-item"><a href="#cm">Chainsaw Man</a></li>
+				<li class="list-group-item"><a href="#jba">Jojo's Bizarre Adventures</a></li>
+				<li class="list-group-item"><a href="#jjk">Jujutsu Kaisen</a></li>
+				<li class="list-group-item"><a href="#kny">Kimetsu no Yaiba</a></li>
+				<li class="list-group-item"><a href="#n">Naruto</a></li>
+				<li class="list-group-item"><a href="#opm">One Punch Man</a></li>
+				<li class="list-group-item"><a href="#snv">Shuumatsu no Walkyrie</a></li>
+			</ul>
 
         </div>
         <!-- Fim container ListGroup-->
@@ -137,7 +129,7 @@
         		<div class="col-sm-12 col-md-4  mgImg">
         			<img src="Imagens/acao/berserk.jpg" class="tamanhoImg" alt="Berserk">
         		</div>
-        		<div class="col-md-6 scrollpsy-example"data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" tabindex="0" id="berserk">
+        		<div class="col-md-6 scrollpsy-example" data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" tabindex="0" id="berserk">
         			<h4 class="text-left">Berserk</h4><br>
         			<h6>392 Capitulos</h6><br>
         			<p>Gatts é um sobrevivente que vaga pelo mundo à procura de respostas. Antigo membro do ext "Bando dos Falcões", um grupo mercenário de cavaleiros e guerreiros liderado por Griffith e Caska, Gatts se adentra na história que ganha corpo e emerge sob um ponto de vista totalmente imprevisível, a medida que os acontecimentos vão se completando. É uma obra dedicada à eterna luta do Catolicismo contra Paganismo....</p>
@@ -146,7 +138,7 @@
         	</div>
         	<div class="row">
         		<div class="col-sm-12 col-md-4  mgImg">
-        			<img src="Imagens/acao/bleach.jpg" class="tamanhoImg" alt="Berserk">
+        			<img src="Imagens/acao/bleach.jpg" class="tamanhoImg" alt="Bleach">
         		</div>
         		<div class="col-md-6" id="bleach">
         			<h4 class="text-left">Bleach</h4><br>
@@ -157,7 +149,7 @@
         	</div>
         	<div class="row">
         		<div class="col-sm-12 col-md-4  mgImg">
-        			<img src="Imagens/acao/bnh.jpg" class="tamanhoImg" alt="Berserk">
+        			<img src="Imagens/acao/bnh.jpg" class="tamanhoImg" alt="Boku no Hero">
         		</div>
         		<div class="col-md-6" id="bnh">
         			<h4 class="text-left">Boku no Hero Academia</h4><br>
@@ -168,7 +160,7 @@
         	</div>
         	<div class="row">
         		<div class="col-sm-12 col-md-4  mgImg">
-        			<img src="Imagens/acao/cm.jpg" class="tamanhoImg" alt="Berserk">
+        			<img src="Imagens/acao/cm.jpg" class="tamanhoImg" alt="Chainsaw Man">
         		</div>
         		<div class="col-md-6" id="cm">
         			<h4 class="text-left">Chainsaw Man</h4><br>
@@ -179,7 +171,7 @@
         	</div>
         	<div class="row">
         		<div class="col-sm-12 col-md-4  mgImg">
-        			<img src="Imagens/acao/jba.jpg" class="tamanhoImg" alt="Berserk">
+        			<img src="Imagens/acao/jba.jpg" class="tamanhoImg" alt="JoJo">
         		</div>
         		<div class="col-md-6" id="jba">
         			<h4 class="text-left">Jojo's Bizarre Adventures</h4><br>
@@ -190,7 +182,7 @@
         	</div>
         	<div class="row">
         		<div class="col-sm-12 col-md-4  mgImg">
-        			<img src="Imagens/acao/jjk.jpg" class="tamanhoImg" alt="Berserk">
+        			<img src="Imagens/acao/jjk.jpg" class="tamanhoImg" alt="Jujutsu Kaisen">
         		</div>
         		<div class="col-md-6" id="jjk">
         			<h4 class="text-left">Jujutsu Kaisen</h4><br>
@@ -201,7 +193,7 @@
         	</div>
         	<div class="row">
         		<div class="col-sm-12 col-md-4  mgImg">
-        			<img src="Imagens/acao/kny.jpg" class="tamanhoImg" alt="Berserk">
+        			<img src="Imagens/acao/kny.jpg" class="tamanhoImg" alt="Kimetsu no Yaiba">
         		</div>
         		<div class="col-md-6" id="kny">
         			<h4 class="text-left">Kimetsu no Yaiba</h4><br>
@@ -212,7 +204,7 @@
         	</div>
         	<div class="row">
         		<div class="col-sm-12 col-md-4  mgImg">
-        			<img src="Imagens/acao/n.jpg" class="tamanhoImg" alt="Berserk">
+        			<img src="Imagens/acao/n.jpg" class="tamanhoImg" alt="Naruto">
         		</div>
         		<div class="col-md-6" id="n">
         			<h4 class="text-left">Naruto</h4><br>
@@ -223,7 +215,7 @@
         	</div>
         	<div class="row">
         		<div class="col-sm-12 col-md-4  mgImg">
-        			<img src="Imagens/acao/opm.jpg" class="tamanhoImg" alt="Berserk">
+        			<img src="Imagens/acao/opm.jpg" class="tamanhoImg" alt="One Punch Man">
         		</div>
         		<div class="col-md-6" id="opm">
         			<h4 class="text-left">One Punch Man<br>
@@ -234,7 +226,7 @@
         	</div>
         	<div class="row">
         		<div class="col-sm-12 col-md-4  mgImg">
-        			<img src="Imagens/acao/snv.jpg" class="tamanhoImg" alt="Berserk">
+        			<img src="Imagens/acao/snv.jpg" class="tamanhoImg" alt="Shuumatsu no Walkyrie">
         		</div>
         		<div class="col-md-6" id="snv">
         			<h4 class="text-left">Shuumatsu no Walkyrie</h4><br>
