--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -166,7 +166,7 @@
         </div>
         <!--Fim Carrossel de notícias-->
 
-        <!-- Início countainer Ação -->
+        <!-- Início Container Ação -->
         <div class="container cont-Bv rounded-3 mb-3">
             <div class="row">
                 <div class="col">
@@ -181,7 +181,9 @@
             </div>
             <div class="row">
                 <div class="col-md-3 col-sm-12">
-                    <img src="Imagens/acao/jjk.jpg" class="tamanhoImg">
+                    <a href="acao.html#jjk" class="text-center">
+                        <img src="Imagens/acao/jjk.jpg" class="tamanhoImg">
+                    </a>
                     <p>Jujutsu Kaisen</p>
                 </div>
                 <div class="col-md-3 col-sm-12">
