Primeiro card adicionado.

--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -180,11 +180,13 @@
                 <hr>
             </div>
             <div class="row">
-                <div class="col-md-3 col-sm-12">
+                <div class="col-md-3 col-sm-12 card">
                     <a href="acao.html#jjk" class="text-center">
-                        <img src="Imagens/acao/jjk.jpg" class="tamanhoImg">
+                        <img src="Imagens/acao/jjk.jpg" class="tamanhoImg card-img">
                     </a>
-                    <p>Jujutsu Kaisen</p>
+                    <div class="card-body">
+                        <p class="card-text">Jujutsu Kaisen</p>
+                    </div>
                 </div>
                 <div class="col-md-3 col-sm-12">
                     <img src="Imagens/acao/snv.jpg" class="tamanhoImg">
