Primeiro card completo,

--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -179,13 +179,13 @@
                 </div>
                 <hr>
             </div>
-            <div class="row">
-                <div class="col-md-3 col-sm-12 card">
+            <div class="card-group">
+                <div class="col-md-3 col-sm-12 card border-light m-3">
                     <a href="acao.html#jjk" class="text-center">
                         <img src="Imagens/acao/jjk.jpg" class="tamanhoImg card-img">
                     </a>
                     <div class="card-body">
-                        <p class="card-text">Jujutsu Kaisen</p>
+                        <p class="card-text text-center">Jujutsu Kaisen</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-12">
