cards no index prontos,accordion no romance.html (ancors n funciona com o accordion fechado)

--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -181,24 +181,36 @@
             </div>
             <div class="card-group">
                 <div class="col-md-3 col-sm-12 card border-light m-3">
-                    <a href="acao.html#jjk" class="text-center">
+                    <a href="acao.html#jjk" class="text-center p-1">
                         <img src="Imagens/acao/jjk.jpg" class="tamanhoImg card-img">
                     </a>
                     <div class="card-body">
                         <p class="card-text text-center">Jujutsu Kaisen</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-12">
-                    <img src="Imagens/acao/snv.jpg" class="tamanhoImg">
-                    <p>Shuumatsu no Walkyrie</p>
+                <div class="col-md-3 col-sm-12 card border-light m-3">
+                    <a href="acao.html#snv" class="text-center p-1">
+                    <img src="Imagens/acao/snv.jpg" class="tamanhoImg card-img">
+                    </a>
+                    <div class="card-body">
+                    <p class="card-text text-center">Shuumatsu no Walkyrie</p>
+                    </div>
                 </div>
-                <div class="col-md-3 col-sm-12">
-                    <img src="Imagens/acao/cm.jpg" class="tamanhoImg">
-                    <p>Chainsaw Man</p>
+                <div class="col-md-3 col-sm-12 card border-light m-3">
+                    <a href="acao.html#cm" class="text-center p-1">
+                    <img src="Imagens/acao/cm.jpg" class="tamanhoImg card-img">
+                    </a>
+                    <div class="card-body">
+                    <p class="card-text text-center">Chainsaw Man</p>
+                    </div>
                 </div>
-                <div class="col-md-3 col-sm-12">
-                    <img src="Imagens/acao/opm.jpg" class="tamanhoImg">
-                    <p>One Punch Man</p>
+                <div class="col-md-3 col-sm-12 card border-light m-3">
+                    <a href="acao.html#opm" class="text-center p-1">
+                    <img src="Imagens/acao/opm.jpg" class="tamanhoImg card-img">
+                    </a>
+                    <div class="card-body">
+                    <p class="card-text text-center">One Punch Man</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -217,22 +229,38 @@
                 </div>
                 <hr>
             </div>
-            <div class="row">
-                <div class="col-md-3 col-sm-12">
-                    <img src="Imagens/esporte/hni.jpg" class="tamanhoImg">
-                    <p>Hajime no Ippo</p>
+            <div class="card-group">
+                <div class="col-md-3 col-sm-12 card border-light m-3">
+                    <a href="esporte.html#hni" class="text-center p-1">
+                    <img src="Imagens/esporte/hni.jpg" class="tamanhoImg card-img">
+                    </a>
+                    <div class="card-body">
+                    <p class="card-text text-center">Hajime no Ippo</p>
+                    </div>
                 </div>
-                <div class="col-md-3 col-sm-12">
-                    <img src="Imagens/esporte/bl.jpg" class="tamanhoImg">
-                    <p>Blue Lock</p>
+                <div class="col-md-3 col-sm-12 card border-light m-3">
+                    <a href="esporte.html#bl" class="text-center p-1">
+                    <img src="Imagens/esporte/bl.jpg" class="tamanhoImg card-img">
+                    </a>
+                    <div class="card-body">
+                    <p class="card-text text-center">Blue Lock</p>
+                    </div>
                 </div>
-                <div class="col-md-3 col-sm-12">
-                    <img src="Imagens/esporte/h.jpg" class="tamanhoImg">
-                    <p>Haikyuu</p>
+                <div class="col-md-3 col-sm-12 card border-light m-3">
+                    <a href="esporte.html#h" class="text-center p-1">
+                    <img src="Imagens/esporte/h.jpg" class="tamanhoImg card-img">
+                    </a>
+                    <div class="card-body">
+                    <p class="card-text text-center">Haikyuu</p>
+                    </div>
                 </div>
-                <div class="col-md-3 col-sm-12">
-                    <img src="Imagens/esporte/r.jpg" class="tamanhoImg">
-                    <p>Real</p>
+                <div class="col-md-3 col-sm-12 card border-light m-3">
+                    <a href="esporte.html#r" class="text-center p-1">
+                    <img src="Imagens/esporte/r.jpg" class="tamanhoImg card-img">
+                    </a>
+                    <div class="card-body">
+                    <p class="card-text text-center">Real</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -251,22 +279,38 @@
                 </div>
                 <hr>
             </div>
-            <div class="row">
-                <div class="col-md-3 col-sm-12">
-                    <img src="Imagens/romance/na.jpg" class="tamanhoImg">
-                    <p>Nagatoro</p>
+            <div class="card-group">
+                <div class="col-md-3 col-sm-12 card border-light m-3">
+                    <a href="romance.html#na" class="text-center p-1">
+                    <img src="Imagens/romance/na.jpg" class="tamanhoImg card-img">
+                    </a>
+                    <div class="card-body">
+                    <p class="card-text text-center">Nagatoro</p>
+                    </div>
                 </div>
-                <div class="col-md-3 col-sm-12">
-                    <img src="Imagens/romance/ks.jpg" class="tamanhoImg">
-                    <p>Kaguya-Sama</p>
+                <div class="col-md-3 col-sm-12 card border-light m-3">
+                    <a href="romance.html#ks" class="text-center p-1">
+                    <img src="Imagens/romance/ks.jpg" class="tamanhoImg card-img">
+                    </a>
+                    <div class="card-body">
+                    <p class="card-text text-center">Kaguya-Sama</p>
+                    </div>
                 </div>
-                <div class="col-md-3 col-sm-12">
-                    <img src="Imagens/romance/uc.jpg" class="tamanhoImg">
-                    <p>Uzaki-Chan</p>
+                <div class="col-md-3 col-sm-12 card border-light m-3">
+                    <a href="romance.html#uc" class="text-center p-1">
+                    <img src="Imagens/romance/uc.jpg" class="tamanhoImg card-img">
+                    </a>
+                    <div class="card-body">
+                    <p class="card-text text-center">Uzaki-Chan</p>
+                    </div>
                 </div>
-                <div class="col-md-3 col-sm-12">
-                    <img src="Imagens/romance/kcc.jpg" class="tamanhoImg">
-                    <p>Komi-San</p>
+                <div class="col-md-3 col-sm-12 card border-light m-3">
+                    <a href="romance.html#kcc" class="text-center p-1">
+                    <img src="Imagens/romance/kcc.jpg" class="tamanhoImg card-img">
+                    </a>
+                    <div class="card-body">
+                    <p class="card-text text-center">Komi-San</p>
+                    </div>
                 </div>
             </div>
         </div>
