Atualização da cor dos botões da Index.html

--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -21,7 +21,7 @@
             }
 
             .navButtons:hover{
-                background-image: linear-gradient(to bottom, lightblue, blue);
+                background-image: linear-gradient(to bottom, #0783E8, #055EA6);
             }
 
             .cont-Bv{
